fix spacing of walk section in desktop view

--- a/css/index.css
+++ b/css/index.css
@@ -199,7 +199,7 @@ footer .footer {
 .container .walk-section {
   padding-top: 50px;
   display: flex;
-  width: 80%;
+  width: 70%;
   justify-content: center;
   margin: 0 auto;
 }
@@ -211,9 +211,6 @@ footer .footer {
     justify-content: center;
     align-items: center;
   }
-}
-.container .walk-section .text-section {
-  width: 50%;
 }
 @media (max-width:500px) {
   .container .walk-section .text-section {
