--- a/less/home-page.less
+++ b/less/home-page.less
@@ -22,7 +22,7 @@
     .walk-section {
         padding-top: 50px;
         display: flex;
-        width: 80%;
+        width: 70%;
         justify-content: center;
         margin: 0 auto;
 
@@ -36,7 +36,7 @@
         }
     
         .text-section {
-            width: 50%;
+            // width: 50%;
 
             @media @phone {
                 width: 100%;
